--- a/reactl3/package.json
+++ b/reactl3/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.15.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
