--- a/reactl3/package.json
+++ b/reactl3/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.6.7",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -19,7 +20,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
